Fixed Bug for - Prev Next Z-index - LeftImage to add text below template

--- a/Scripts/engine/css/style.css
+++ b/Scripts/engine/css/style.css
@@ -394,7 +394,7 @@
 
 
 #prev,#next{
-	z-index:1000;
+	z-index:99;
 	position: absolute;
 	top: 50%;
 }
